# WaferDefectX

./: .gitignore  DESIGN.md  EVAL_BASELINE.md  EVAL_PROTOCOL.md  PLAN.md  PLAN_v2.md  README.md  TEST_REPORT.md  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_linux.sh
cpp/: CMakeLists.txt  defect_localization.cpp  defect_localization.hpp  feature_extraction.cpp  feature_extraction.hpp  main.cpp  onnx_classifier.cpp  onnx_classifier.hpp  preprocess.cpp  preprocess.hpp
frequency_analysis/: fft_filtering.py  spectrum_visualization.py
python/: benchmark.py  classifier.py  cnn_model.py  convert_wm811k_full.py  create_linkedin_final.py  create_linkedin_images_v2.py  data_generator.py  dataset_parser.py  defect_localization.py  export_cnn_to_onnx.py  export_to_onnx.py  export_to_openvino.py  export_to_openvino_hb.py  features.py  generate_portfolio_showcase.py  generate_result_collage_v1.py  generate_result_collage_v2.py  main.py  model_meta.py  paths.py  preprocessing.py  roi_dataset.py  train_cnn.py  train_eval.py  train_roi_cnn.py  train_roi_full.py  wafer_full_dataset.py  wafer_mobilenet.py  wafer_resnet.py
results/: cnn_wafer_defect.onnx  cnn_wafer_model.pth  cnn_wafer_model_quantized.pth  hb_rf_model.onnx  mobilenet_roi_full_metrics.json  rf_model.onnx  rf_model.pkl  roi_cnn_eval_metrics.json
results/ov_model/: rf_model.xml
scripts/: smoke.sh
tests/: test_core.py  test_model_meta.py
